Implement skill trees system with point type overrides, data binding, UI improvements